# IronEngine-BonaFide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  GALLERY.md  GALLERY_SNIPPET.md  PERFORMANCE.md  RENDERING_FILES.md  USER_GUIDE.md
examples/: 01_render_pointcloud.py  02_render_mesh.py  03_3dcreator_session_to_image.py  04_sim_shim_replace_renderworld.py  05_differentiable_inverse.py  render_external.py
examples/assets/: scene.json
native/: CMakeLists.txt  README.md
native/include/bonafide/: api.hpp  octree.hpp  upload.hpp
native/src/: bindings.cpp  octree.cu  splat.cu  surfel.cu  upload.cpp
scripts/: _install_native.py  build_native.py  build_native_win.bat
src/ironengine_bonafide/: __init__.py  bundle.py  cli.py  differentiable.py  errors.py  lifecycle.py  logging.py  registry.py  validation.py
src/ironengine_bonafide/api/: __init__.py  engine.py  outputs.py  passes_default.py  registry.py  render.py
src/ironengine_bonafide/assets/: __init__.py  cache.py  mount.py
src/ironengine_bonafide/assets/loaders/: __init__.py  exr.py  gltf.py  hdr.py  iemodel.py  ktx2.py  obj.py  pcd.py  ply.py  usd.py  vdb.py
src/ironengine_bonafide/backends/: __init__.py  torch_raster.py
src/ironengine_bonafide/backends/cpu/: backend.py
src/ironengine_bonafide/backends/cuda/: backend.py  completion.py  lod.py  native_bridge.py  raster.py  softbody.py  splat.py  streams.py  surfel.py
src/ironengine_bonafide/backends/wgpu/: backend.py
src/ironengine_bonafide/core/: __init__.py  backend.py  camera.py  color.py  config.py  determinism.py  envmap.py  light.py  material.py  mesh.py  pointcloud.py  profile.py  scene.py  shadow.py  softbody.py  tensor.py  volume.py
src/ironengine_bonafide/integrations/: __init__.py  _display.py  creator3d.py  sim.py
src/ironengine_bonafide/passes/: __init__.py  aa_pass.py  base.py  completion_pass.py  lod_pass.py  neural_denoise.py  neural_relight.py  neural_upscale.py  particle_pass.py  pbr_pass.py  postprocess.py  shadow.py  sky_pass.py  softbody_pass.py  splat_pass.py  volumetric_pass.py  water_pass.py
src/ironengine_bonafide/training/: __init__.py  losses.py  optimize_gsplat.py  train_completion_prior.py
tests/: _probe_env.py  conftest.py  test_3dcreator_compat.py  test_backend_selection.py  test_bundle_extras_round_trip.py  test_config_round_trip.py  test_creator3d_camera_parity.py  test_cuda_paths.py  test_gltf_embedded_texture.py  test_gltf_loader.py  test_iemodel_loader.py  test_iemodel_v3.py  test_large_triangle_raster.py  test_mesh_render_smoke.py  test_native_extension.py  test_obj_mtl.py  test_pbr_specular.py  test_ply_crlf_header.py  test_pointcloud_render_smoke.py  test_realism_cpu.py  test_render_bundle_round_trip.py  test_shadow_csm.py  test_sim_integration_transforms.py  test_sim_shim.py  test_softbody_step_smoke.py  test_splat_auto_size.py  test_splat_lit.py
